# DiffAnaFactory

./: CMakeLists.txt  CMakePresets.json  Config.cmake.in  README
cmake/: install-config.cmake  install-rules.cmake  shared_or_static.cmake  variables.cmake
docs/: Doxyfile.in
example/: CMakeLists.txt  example_create.cpp  example_multi_read.cpp  example_read.cpp  example_read_and_fit.cpp  example_write.cpp
inc/: DiffAnalysisContext.h  DiffAnalysisFactory.h  DifferentialContext.h  DifferentialFactory.h  Dim2AnalysisContext.h  Dim2AnalysisFactory.h  Dim2DistributionFactory.h  Dim3AnalysisContext.h  Dim3AnalysisFactory.h  Dim3DistributionFactory.h  DistributionContext.h  DistributionFactory.h  ExtraDimensionMapper.h  LinkDef.h  MultiDimAnalysisContext.h  MultiDimAnalysisExtension.h  MultiDimDistributionContext.h  TripleAnalysisContext.h  TripleAnalysisFactory.h  detail.hpp
include/: midas.hpp
source/: AxisCfg.cpp  DifferentialContext.cpp  DifferentialFactory.cpp  DistributionContext.cpp  DistributionFactory.cpp  ExtraDimensionMapper.cpp  axis_config.cpp  basic_context.cpp  basic_distribution.cpp  context.cpp  detail.cpp  distribution.cpp  observable.cpp  v_context.cpp
src/: DiffAnalysisContext.cxx  DiffAnalysisFactory.cxx  DifferentialContext.cxx  DifferentialFactory.cxx  Dim2AnalysisContext.cxx  Dim2AnalysisFactory.cxx  Dim2DistributionFactory.cxx  Dim3AnalysisContext.cxx  Dim3AnalysisFactory.cxx  Dim3DistributionFactory.cxx  DistributionContext.cxx  DistributionFactory.cxx  ExtraDimensionMapper.cxx  MultiDimAnalysisContext.cxx  MultiDimAnalysisExtension.cxx  MultiDimDistributionContext.cxx  TripleAnalysisContext.cxx  TripleAnalysisFactory.cxx
test/: 01_edm_tests.cpp  02_distctx_tests.cpp  04_anactx_tests.cpp  05_anafac_tests.cpp  CMakeLists.txt  test_runner.cpp  tests_axis_config.cpp  tests_basic_context.cpp  tests_basic_distribution.cpp  tests_context.cpp  tests_distribution.cpp  tests_observable.cpp  tests_v_context.cpp
tests/: 01_edm_tests.cpp  02_distctx_tests.cpp  04_anactx_tests.cpp  05_anafac_tests.cpp  CMakeLists.txt
